# simple_oauth2

./: README.md  docker-compose.yml
MongoDBT/: CMakeLists.txt  Ex1.hpp  main.cpp
authServer/: AuthorizeConfigurationMW.hpp  CMakeLists.txt  ClientMetadataMW.hpp  DB.cpp  DB.hpp  Dockerfile  Handlers.cpp  Handlers.hpp  Utils.cpp  Utils.hpp  key.pem  main.cpp  public.pem
authServer/files/: approve.html  error.html  index.html
client/: CMakeLists.txt  DB.cpp  DB.hpp  Dockerfile  Handlers.cpp  Handlers.hpp  Utils.cpp  Utils.hpp  crow.h  main.cpp
client/files/: client_info.html  data.html  error.html  index.html
infra/: .cmake.env  .env  Dockerfile  docker-compose.yml  init-mongo.js
protectedResource/: AuthMiddlware.hpp  CMakeLists.txt  DB.cpp  DB.hpp  Dockerfile  Handlers.cpp  Handlers.hpp  Utils.cpp  Utils.hpp  main.cpp
protectedResource/files/: index.html
